Crex/tests/type_declarations/intersection_types/invalid_types/invalid_iterable_type.crxt
--TEST--
iterable type cannot take part in an intersection type
--FILE--
<?crx

function foo(): iterable&Iterator {}

?>
--EXPECTF--
Fatal error: Type Traversable|array cannot be part of an intersection type in %s on line %d
